--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Phoenix Guide
+description: ElixirのWebフレームワークPhoenixのガイド
 theme: just-the-docs
+exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
+search_enabled: true
