--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Phoenix Guide
 description: ElixirのWebフレームワークPhoenixのガイド
-url: "https://koga1020.github.io"
+url: "https://fukuoka-ex.github.io"
 baseurl: "/phoenix-guide-ja"
 theme: just-the-docs
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
