--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@
 /tmp/
 
 # Used by dotenv library to load environment variables.
-# .env
+.env
+.envrc
 
 # Ignore Byebug command history file.
 .byebug_history
