--- a/version_checker/.gitignore
+++ b/version_checker/.gitignore
@@ -22,3 +22,7 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 version_checker-*.tar
 
+### Others
+config/*.secret.exs
+/phoenix-guide-ja
+/phoenix
