--- a/.github/workflows/check_hash.yml
+++ b/.github/workflows/check_hash.yml
@@ -21,6 +21,8 @@ jobs:
         mix local.hex --force
         mix deps.get
     - name: Run Task
+      env:
+        GITHUB_TOEKN: ${{ secrets.GITHUB_OAUTH_TOKEN }}
       working-directory: ./version_checker
       run: |
         mix version_check.run
