--- a/.github/workflows/check_hash.yml
+++ b/.github/workflows/check_hash.yml
@@ -1,28 +1,45 @@
 name: Check Commit Hash
 
 on:
-  schedule:
+  schedule:	
     - cron: 0 0 * * *
-
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
-    container:
-      image: elixir:1.9.1-slim
-
     steps:
     - uses: actions/checkout@v1
+    - name: Read .tool-versions
+      uses: marocchino/tool-versions-action@v1
+      with:
+        path: ./version_checker/.tool-versions
+      id: asdf
+    - uses: actions/setup-elixir@v1.0.0
+      with:
+        otp-version: ${{ steps.asdf.outputs.erlang }}
+        elixir-version: ${{ steps.asdf.outputs.elixir }}
+    - name: Cache deps
+      uses: actions/cache@v1
+      id: cache-deps
+      with:
+        path: deps
+        key: ${{ runner.os }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/version_checker/mix.lock')) }}
+        restore-keys: |
+          ${{ runner.os }}-mix-
     - name: Install Dependencies
       working-directory: ./version_checker
       run: |
         mix local.rebar --force
         mix local.hex --force
+    - name: Install Dependencies
+      working-directory: ./version_checker
+      if: steps.cache-deps.outputs.cache-hit != 'true'
+      run: |
         mix deps.get
     - name: Run Task
       env:
         GITHUB_TOEKN: ${{ secrets.GITHUB_OAUTH_TOKEN }}
       working-directory: ./version_checker
       run: |
-        mix version_check.run
+        mix version_checker.run
