--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: ElixirのWebフレームワークPhoenixのガイド
 url: "https://fukuoka-ex.github.io"
 baseurl: "/phoenix-guide-ja"
 theme: just-the-docs
-exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
+exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile", "version_checker", "docs"]
 search_enabled: true
 plugins:
   - jekyll-seo-tag
