--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,6 @@ exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "pac
 search_enabled: true
 plugins:
   - jekyll-seo-tag
+phoenix_versions:
+  - 1.4
+  - 1.5
