--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Phoenix Guide
 url: "https://fukuoka-ex.github.io"
 baseurl: "/phoenix-guide-ja"
-remote_theme: pmarsceill/just-the-docs
+theme: just-the-docs
 lang: ja
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile", "version_checker", "docs", "vendor/"]
 search_enabled: true
